# remi

./: pyproject.toml  setup.py
remi/: __init__.py
xml2remi/: __main__.py  error_example.xml  example.py  example.xml
